--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>[Your Style Title] by [Your Name] | Style Stage</title>
-    <meta name="description" content="[Your optional description]" />
-    <link href="../style.css" rel="stylesheet" />
+    <title>Old Monitor by Daniel, Sofia, Brenna | Style Stage</title>
+    <meta name="description" content="A simple site where we create a crt monitor look for stylestage" />
+    <link href="../sass/style.css" rel="stylesheet" />
   </head>
   <body>
     <a href="#main" class="skip-link">Skip to main content</a>
