--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Old Monitor by Daniel, Sofia, Brenna | Style Stage</title>
     <meta name="description" content="A simple site where we create a crt monitor look for stylestage" />
-    <link href="../sass/style.css" rel="stylesheet" />
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
     <a href="#main" class="skip-link">Skip to main content</a>
